--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "node-forge": "^1.3.1",
     "pino": "^9.0.0",
     "prisma": "^5.17.0",
-    "xml-crypto": "^5.0.0",
+    "xml-crypto": "6.1.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
