chore: trigger release-please v0.1.2

--- a/.env.example
+++ b/.env.example
@@ -6,10 +6,11 @@ PORT=3000
 JWT_SECRET=change_this_development_secret_please
 
 # Database (Prisma)
-DATABASE_URL=postgresql://user:password@postgres:5432/nfse?schema=public
+DATABASE_URL=postgresql://nfse:nfse@localhost:5432/nfse?schema=public
 
 # External agent (if applicable)
-AGENT_BASE_URL=https://homologacao.agente-autorizador.local
+# Optional external agent (mock/homolog)
+AGENT_BASE_URL=https://agente-homolog.fake
 
 # A1 certificate (optional in dev/test)
 CERT_PFX_PATH=/certs/cert.pfx
