feat: DX Windows e smoke autônomo (AutoStartDev), melhorias NFSe e client
- Smoke (PowerShell):
  * Adiciona -AutoStartDev (sobe dev in-memory se /live indisponível)
  * Captura correlation-id, httpStatus/httpStatusCode e durationMs em emitir/cancel
  * durationMs em list/artifacts e totalDurationMs no relatório; passos com ok; report.ok agregado
  * Opções: -SkipArtifacts, -NoCancel, -JsonOut, -Pretty; salva relatório smoke_*.json
- Scripts DX: free-port.ps1, start-dev-mem.ps1, dev-start-and-smoke.ps1, dev-up.ps1,
  health.ps1, migrate.ps1, emit-sample.ps1, demo-quick.ps1, emit-real.ps1
- CLI/Cliente TS: scripts/cli.ts e src/client (timeouts, retries, correlação); client-demo.ts
- Relatórios: scripts/report-summary.ts e comando npm para resumir último relatório
- NFSe rotas/serviço: preValidation JWT, corpo com example, list com filtros/sort, cancel com reason
  e retorno canceledAt; GET /nfse/:id inclui cancelReason/canceledAt
- Idempotência: payloadHash na chave; criação atômica com transação quando disponível
- Servidor: mensagem EADDRINUSE com dica prática (liberar porta/iniciar dev)
- CI: workflow Smoke Windows com AutoStart e upload do relatório
- Exemplos: JSONs de emissão (CPF/CNPJ, endereço, ISS retido, deduções)
- Testes: correlação de headers e cancel com reason

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,14 +10,20 @@ services:
       - "5432:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U nfse"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
   app:
     build: .
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     environment:
       DATABASE_URL: postgresql://nfse:nfse@db:5432/nfse?schema=public
       JWT_SECRET: change_this_development_secret_please
-      AGENT_BASE_URL: https://agente-homolog.fake
+      # AGENT_BASE_URL: https://agente-homolog.fake
       METRICS_ENABLED: "1"
     ports:
       - "3000:3000"
