docs: badge do workflow de smoke no README e resumo no Job Summary; .env.example atualizado (IN_MEMORY_DB e exemplos do agente)

--- a/.env.example
+++ b/.env.example
@@ -7,14 +7,16 @@ JWT_SECRET=change_this_development_secret_please
 
 # Database (Prisma)
 DATABASE_URL=postgresql://nfse:nfse@localhost:5432/nfse?schema=public
+# Use in-memory DB (ignore DATABASE_URL). 1 = enabled, 0 = disabled
+IN_MEMORY_DB=1
 
-# External agent (if applicable)
-# Optional external agent (mock/homolog)
-AGENT_BASE_URL=https://agente-homolog.fake
+## External agent (optional)
+# Define to use the real agent (emits/cancels for real)
+# AGENT_BASE_URL=https://seu-agente.exemplo
 
 # A1 certificate (optional in dev/test)
-CERT_PFX_PATH=/certs/cert.pfx
-CERT_PFX_PASSWORD=change_me
+# CERT_PFX_PATH=C:\certs\cert.pfx
+# CERT_PFX_PASSWORD=change_me
 
 # Logging
 LOG_LEVEL=info
