--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "dev:up": "powershell -ExecutionPolicy Bypass -File ./scripts/dev-up.ps1",
     "health": "powershell -ExecutionPolicy Bypass -File ./scripts/health.ps1",
     "smoke:fast": "powershell -ExecutionPolicy Bypass -File ./scripts/smoke.ps1 -SkipArtifacts",
-  "smoke:emit-only": "powershell -ExecutionPolicy Bypass -File ./scripts/smoke.ps1 -SkipArtifacts -NoCancel",
-  "smoke:report": "powershell -NoProfile -ExecutionPolicy Bypass -Command \"& { $ts = Get-Date -Format yyyyMMdd_HHmmss; ./scripts/smoke.ps1 -SkipArtifacts -NoCancel -AutoStartDev -JsonOut \\\"./smoke_$ts.json\\\" }\"",
-  "smoke:report:summary": "powershell -NoProfile -ExecutionPolicy Bypass -Command \"& { $last = Get-ChildItem -Path . -Filter 'smoke_*.json' | Sort-Object LastWriteTime -Descending | Select-Object -First 1; if ($null -eq $last) { Write-Host 'Nenhum smoke_*.json encontrado'; exit 1 }; npx tsx scripts/report-summary.ts \"$($last.FullName)\" }\"",
-  "smoke:summary": "tsx scripts/report-summary.ts",
+    "smoke:emit-only": "powershell -ExecutionPolicy Bypass -File ./scripts/smoke.ps1 -SkipArtifacts -NoCancel",
+    "smoke:report": "powershell -NoProfile -ExecutionPolicy Bypass -Command \"& { $ts = Get-Date -Format yyyyMMdd_HHmmss; ./scripts/smoke.ps1 -SkipArtifacts -NoCancel -AutoStartDev -JsonOut \\\"./smoke_$ts.json\\\" }\"",
+    "smoke:report:summary": "powershell -NoProfile -ExecutionPolicy Bypass -Command \"& { $last = Get-ChildItem -Path . -Filter 'smoke_*.json' | Sort-Object LastWriteTime -Descending | Select-Object -First 1; if ($null -eq $last) { Write-Host 'Nenhum smoke_*.json encontrado'; exit 1 }; npx tsx scripts/report-summary.ts \"$($last.FullName)\" }\"",
+    "smoke:summary": "tsx scripts/report-summary.ts",
     "lint": "eslint . --ext .ts,.tsx",
     "lint:fix": "eslint . --ext .ts,.tsx --fix",
     "prisma:generate": "prisma generate",
@@ -27,22 +27,22 @@
     "prisma:migrate:local": "cross-env DATABASE_URL=postgresql://nfse:nfse@localhost:5432/nfse?schema=public prisma migrate dev",
     "prisma:generate:local": "cross-env DATABASE_URL=postgresql://nfse:nfse@localhost:5432/nfse?schema=public prisma generate",
     "token": "tsx scripts/gen-token.ts",
-  "openapi:dump": "tsx scripts/openapi-dump.ts",
-  "cli": "tsx scripts/cli.ts",
-  "openapi:types": "npm run -s openapi:dump > openapi.json && npx openapi-typescript openapi.json -o src/types/openapi.d.ts",
-  "port:free": "powershell -ExecutionPolicy Bypass -File ./scripts/free-port.ps1 -Port 3000",
-  "dev:mem:win": "powershell -ExecutionPolicy Bypass -File ./scripts/start-dev-mem.ps1 -FreePort",
-  "dev:win:start": "powershell -ExecutionPolicy Bypass -File ./scripts/dev-start-and-smoke.ps1 -FreePort",
-  "dev:win:start-report": "powershell -ExecutionPolicy Bypass -File ./scripts/dev-start-and-smoke.ps1 -FreePort -Report",
-  "dev:win:emit-only": "powershell -ExecutionPolicy Bypass -File ./scripts/dev-start-and-smoke.ps1 -FreePort -SkipArtifacts -NoCancel",
-  "dev:win:emit-report": "powershell -ExecutionPolicy Bypass -File ./scripts/dev-start-and-smoke.ps1 -FreePort -SkipArtifacts -NoCancel -Report",
-  "verify:xml": "tsx scripts/verify-xml.ts",
-  "check:pfx": "tsx scripts/check-pfx.ts",
-  "check:agent": "tsx scripts/check-agent.ts",
-  "demo:emit": "powershell -ExecutionPolicy Bypass -File ./scripts/emit-sample.ps1",
-  "demo:quick": "powershell -ExecutionPolicy Bypass -File ./scripts/demo-quick.ps1",
-  "demo:real": "powershell -ExecutionPolicy Bypass -File ./scripts/emit-real.ps1 -Pretty",
-  "client:demo": "tsx scripts/client-demo.ts",
+    "openapi:dump": "tsx scripts/openapi-dump.ts",
+    "cli": "tsx scripts/cli.ts",
+    "openapi:types": "npm run -s openapi:dump > openapi.json && npx openapi-typescript openapi.json -o src/types/openapi.d.ts",
+    "port:free": "powershell -ExecutionPolicy Bypass -File ./scripts/free-port.ps1 -Port 3000",
+    "dev:mem:win": "powershell -ExecutionPolicy Bypass -File ./scripts/start-dev-mem.ps1 -FreePort",
+    "dev:win:start": "powershell -ExecutionPolicy Bypass -File ./scripts/dev-start-and-smoke.ps1 -FreePort",
+    "dev:win:start-report": "powershell -ExecutionPolicy Bypass -File ./scripts/dev-start-and-smoke.ps1 -FreePort -Report",
+    "dev:win:emit-only": "powershell -ExecutionPolicy Bypass -File ./scripts/dev-start-and-smoke.ps1 -FreePort -SkipArtifacts -NoCancel",
+    "dev:win:emit-report": "powershell -ExecutionPolicy Bypass -File ./scripts/dev-start-and-smoke.ps1 -FreePort -SkipArtifacts -NoCancel -Report",
+    "verify:xml": "tsx scripts/verify-xml.ts",
+    "check:pfx": "tsx scripts/check-pfx.ts",
+    "check:agent": "tsx scripts/check-agent.ts",
+    "demo:emit": "powershell -ExecutionPolicy Bypass -File ./scripts/emit-sample.ps1",
+    "demo:quick": "powershell -ExecutionPolicy Bypass -File ./scripts/demo-quick.ps1",
+    "demo:real": "powershell -ExecutionPolicy Bypass -File ./scripts/emit-real.ps1 -Pretty",
+    "client:demo": "tsx scripts/client-demo.ts",
     "test": "jest --passWithNoTests",
     "coverage": "jest --coverage --passWithNoTests",
     "smoke": "powershell -ExecutionPolicy Bypass -File ./scripts/smoke.ps1"
@@ -55,10 +55,12 @@
     "@prisma/client": "^5.17.0",
     "@xmldom/xmldom": "^0.8.10",
     "axios": "^1.7.4",
+    "docker": "^1.0.0",
     "fastify": "^5.0.0",
     "jsonwebtoken": "^9.0.2",
     "node-forge": "^1.3.1",
     "pino": "^9.0.0",
+    "pino-pretty": "^13.1.1",
     "prisma": "^5.17.0",
     "xml-crypto": "6.1.2",
     "zod": "^3.23.8"
@@ -78,12 +80,12 @@
     "husky": "^9.0.11",
     "jest": "^29.7.0",
     "lint-staged": "^15.2.2",
+    "openapi-typescript": "^7.5.1",
     "prettier": "^3.3.2",
     "ts-jest": "^29.1.2",
     "tsup": "^8.1.0",
     "tsx": "^4.7.0",
-    "typescript": "^5.9.2",
-    "openapi-typescript": "^7.5.1"
+    "typescript": "^5.9.2"
   },
   "lint-staged": {
     "src/**/*.{ts,tsx}": [
