--- a/ui/package.json
+++ b/ui/package.json
@@ -18,6 +18,7 @@
     "postcss": "^8.5.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.63.0",
     "react-router-dom": "^6.30.1",
     "tailwindcss": "^3.4.17"
   },
