fix: add database reset step in CI to ensure clean state
- Add 'npx prisma migrate reset --force --skip-generate' before migrate deploy
- This ensures the database is in a clean state before applying migrations
- Prevents conflicts from partially applied migrations in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,8 @@ jobs:
           cache: 'npm'
       - run: npm ci
       - run: npx prisma generate
+      - name: Reset database
+        run: npx prisma migrate reset --force --skip-generate
       - run: npx prisma migrate deploy
       - run: npm run lint
       - run: npm test -- --ci --runInBand
