feat: migrate to Supabase + Vercel deployment
- Update DEPLOY_GUIDE.md to recommend Supabase + Vercel as primary option
- Update README.md with Supabase deployment instructions
- Add prisma:migrate:deploy script for production deployments
- Add vercel.json configuration for Vercel deployment
- Update deployment recommendations and setup steps

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:migrate:local": "cross-env DATABASE_URL=postgresql://nfse:nfse@localhost:5432/nfse?schema=public prisma migrate dev",
+    "prisma:migrate:deploy": "prisma migrate deploy",
     "prisma:generate:local": "cross-env DATABASE_URL=postgresql://nfse:nfse@localhost:5432/nfse?schema=public prisma generate",
     "token": "tsx scripts/gen-token.ts",
     "openapi:dump": "tsx scripts/openapi-dump.ts",
