fix: update Vercel configuration for proper deployment
- Simplify vercel.json configuration for Node.js backend
- Add vercel-build script optimized for Vercel deployment
- Configure proper build command and routing
- Include dist files in deployment

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev:mem": "cross-env NODE_ENV=development PORT=3000 JWT_SECRET=change_this_development_secret_please IN_MEMORY_DB=1 METRICS_ENABLED=1 tsx watch src/server.ts",
     "dev:3001": "cross-env PORT=3001 tsx watch src/server.ts",
     "build": "tsup src/server.ts src/app.ts --format esm,cjs --dts --splitting --clean",
+    "vercel-build": "prisma generate && tsup src/server.ts --format cjs --dts --clean",
     "start": "node dist/server.js",
     "start:mem": "cross-env NODE_ENV=development PORT=3000 JWT_SECRET=change_this_development_secret_please IN_MEMORY_DB=1 METRICS_ENABLED=1 node dist/server.js",
     "db:up": "docker compose up -d db",
