--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev:3001": "cross-env PORT=3001 tsx watch src/server.ts",
     "build": "tsup src/server.ts src/app.ts --format esm,cjs --dts --splitting --clean",
     "vercel-build": "prisma generate && tsup src/app.ts src/modules/jobs/retry.service.ts --format cjs --dts --clean",
+    "build-minimal": "prisma generate",
     "start": "node dist/server.js",
     "start:mem": "cross-env NODE_ENV=development PORT=3000 JWT_SECRET=change_this_development_secret_please IN_MEMORY_DB=1 METRICS_ENABLED=1 node dist/server.js",
     "db:up": "docker compose up -d db",
