--- a/package.json
+++ b/package.json
@@ -63,10 +63,12 @@
     "docker": "^1.0.0",
     "fastify": "^5.0.0",
     "jsonwebtoken": "^9.0.2",
+    "node-fetch": "^3.3.2",
     "node-forge": "^1.3.1",
     "pino": "^9.0.0",
     "pino-pretty": "^13.1.1",
     "prisma": "^5.17.0",
+    "puppeteer": "^24.22.2",
     "xml-crypto": "6.1.2",
     "zod": "^3.23.8"
   },
