--- a/ui/package.json
+++ b/ui/package.json
@@ -15,6 +15,8 @@
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.21",
     "axios": "^1.12.2",
+    "lucide-react": "^0.544.0",
+    "node-fetch": "^3.3.2",
     "postcss": "^8.5.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
