--- a/ui/package.json
+++ b/ui/package.json
@@ -18,6 +18,7 @@
     "lucide-react": "^0.544.0",
     "node-fetch": "^3.3.2",
     "postcss": "^8.5.6",
+    "puppeteer": "^24.22.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.63.0",
