feat: adiciona migrações e arquivos de configuração para ServiceTypes

--- a/package.json
+++ b/package.json
@@ -58,6 +58,9 @@
     "@fastify/jwt": "^10.0.0",
     "@fastify/rate-limit": "^10.0.0",
     "@prisma/client": "^5.17.0",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/ssr": "^0.7.0",
+    "@supabase/supabase-js": "^2.57.4",
     "@xmldom/xmldom": "^0.8.10",
     "axios": "^1.7.4",
     "docker": "^1.0.0",
