feat: add Supabase configuration to environment variables

--- a/ui/.env.example
+++ b/ui/.env.example
@@ -1,2 +1,6 @@
 # URL da API do backend
 VITE_API_URL=http://localhost:3000
+
+# Configurações do Supabase
+VITE_SUPABASE_URL=your-supabase-url
+VITE_SUPABASE_ANON_KEY=your-supabase-anon-key
