--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,8 @@
 {
   "version": 2,
-  "buildCommand": "cd ui && npm install && npm run build",
+  "buildCommand": "cd ui && npm ci && npm run build",
   "outputDirectory": "ui/dist",
-  "installCommand": "echo 'Skipping root install' && cd ui && npm install",
-  "ignoreCommand": "git diff --quiet HEAD^ HEAD ./",
+  "installCommand": "cd ui && npm ci",
   "framework": null,
   "functions": {
     "api/nfse-working.mjs": {
