--- a/ui/package.json
+++ b/ui/package.json
@@ -15,6 +15,7 @@
     "@heroicons/react": "^2.2.0",
     "@supabase/supabase-js": "^2.57.4",
     "@types/react-router-dom": "^5.3.3",
+    "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.21",
     "axios": "^1.12.2",
     "lucide-react": "^0.544.0",
@@ -25,20 +26,19 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.63.0",
     "react-router-dom": "^6.30.1",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "vite": "^5.4.20"
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
     "@types/node": "^24.5.2",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.7",
-    "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.35.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.4.0",
     "typescript": "~5.8.3",
-    "typescript-eslint": "^8.43.0",
-    "vite": "^5.4.20"
+    "typescript-eslint": "^8.43.0"
   }
 }
