feat: update dependencies and enhance logging in CRUD operations for suppliers and clients; implement automatic UUID generation in database

--- a/package.json
+++ b/package.json
@@ -60,10 +60,11 @@
     "@prisma/client": "^5.17.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.7.0",
-    "@supabase/supabase-js": "^2.57.4",
+    "@supabase/supabase-js": "^2.58.0",
     "@xmldom/xmldom": "^0.8.10",
     "axios": "^1.7.4",
     "docker": "^1.0.0",
+    "dotenv": "^17.2.3",
     "fastify": "^5.0.0",
     "jsonwebtoken": "^9.0.2",
     "node-fetch": "^3.3.2",
